added admin page, add pets form and back to home page

--- a/PetAdoptionAPI/Templates/index.html
+++ b/PetAdoptionAPI/Templates/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Pet Adoption Catalog</h1>
+        <button id="admin-button" onclick="window.location.href='/admin'">Admin</button>>
     </header>
     <main>
         <section id="filter-pets-section">
@@ -26,12 +27,6 @@
                     Other Animals
                 </button>
             </div>
-        </section>
-        <section id="add-pet-section">
-            <form id="add-pet-form">
-                <!-- Form Fields -->
-                <button type="submit">Add Pet</button>
-            </form>
         </section>
         <section>
             <ul id="pets-list"></ul>
