--- a/PetAdoptionAPI/Templates/admin.html
+++ b/PetAdoptionAPI/Templates/admin.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="/static/css/styles.css">
     <title>Admin - Pet Adoption Catalog</title>
 </head>
-<body>
-    <header>
+<body id="admin-body">
+    <header id="admin-header">
         <h1>Pet Adoption Catalog - Admin</h1>
+        <button id="back-to-home-button" onclick="window.location.href='/'">Back to Home</button>
     </header>
     <main>
         <section id="add-pet-section">
@@ -16,26 +17,27 @@
             <form id="add-pet-form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
+
                 <label for="age">Age:</label>
                 <input type="text" id="age" name="age" required>
+
                 <label for="breed">Breed:</label>
                 <input type="text" id="breed" name="breed" required>
+
                 <label for="type">Type:</label>
                 <input type="text" id="type" name="type" required>
+
                 <label for="description">Description:</label>
                 <input type="text" id="description" name="description" required>
+
                 <label for="adoption_status">Adoption Status:</label>
                 <select id="adoption_status" name="adoption_status" required>
                     <option value="Available">Available</option>
                     <option value="Adopted">Adopted</option>
                 </select>
+
                 <button type="submit">Add Pet</button>
             </form>
-        </section>
-
-        <!-- Button to navigate back to the landing page -->
-        <section>
-            <button onclick="window.location.href='index.html'">Back to Home</button>
         </section>
     </main>
     <footer>
