Add pet functionality working

--- a/PetAdoptionAPI/Templates/admin.html
+++ b/PetAdoptionAPI/Templates/admin.html
@@ -43,6 +43,6 @@
     <footer>
         <p>&copy; 2024 Pet Adoption</p>
     </footer>
-    <script src="/static/js/main.js"></script>
+    <script src="/static/js/admin.js"></script>
 </body>
 </html>
