changes for images

--- a/PetAdoptionAPI/Templates/index.html
+++ b/PetAdoptionAPI/Templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/styles.css">
     <title>Pet Adoption Catalog</title>
 </head>
+
 <body>
     <header>
         <h1>Pet Adoption Catalog</h1>
@@ -15,15 +17,15 @@
         <section id="filter-pets-section">
             <div class="filter-buttons">
                 <button class="filter-button" data-type="Dog">
-                    <img src="/static/images/dog-icon.png" alt="Dogs">
+                    <img src="/PetAdoptionAPI/Static/cute_dog.jpg" alt="Dogs">
                     Dogs
                 </button>
                 <button class="filter-button" data-type="Cat">
-                    <img src="/static/images/cat-icon.png" alt="Cats">
+                    <img src="/PetAdoptionAPI/Static/baby_kitten.jpg" alt="Cats">
                     Cats
                 </button>
                 <button class="filter-button" data-type="Other">
-                    <img src="/static/images/other-icon.png" alt="Other Animals">
+                    <img src="/PetAdoptionAPI/Static/bird_and_rabbit.jpg" alt="Other Animals">
                     Other Animals
                 </button>
             </div>
@@ -37,4 +39,5 @@
     </footer>
     <script src="/static/js/main.js"></script>
 </body>
+
 </html>
