--- a/PetAdoptionAPI/Templates/admin.html
+++ b/PetAdoptionAPI/Templates/admin.html
@@ -37,7 +37,13 @@
                 </select>
 
                 <button type="submit">Add Pet</button>
+                <button type="button" id="edit-pet-button">Edit Pet</button>
+                <button type="button" id="delete-pet-button">Delete Pet</button>
             </form>
+        </section>
+        <section id="pets-list-section">
+            <button id="show-all-pets-button">Show All Pets</button>
+            <ul id="pets-list"></ul>
         </section>
     </main>
     <footer>
