--- a/PetAdoptionAPI/Templates/admin.html
+++ b/PetAdoptionAPI/Templates/admin.html
@@ -40,9 +40,9 @@
                 <button type="button" id="edit-pet-button">Edit Pet</button>
                 <button type="button" id="delete-pet-button">Delete Pet</button>
             </form>
-        </section>
-        <section id="pets-list-section">
             <button id="show-all-pets-button">Show All Pets</button>
+        </section>
+        <section id="pets-list-section" class="pets-list-container">
             <ul id="pets-list"></ul>
         </section>
     </main>
