--- a/PetAdoptionAPI/Static/css/admin.css
+++ b/PetAdoptionAPI/Static/css/admin.css
@@ -136,13 +136,12 @@ body {
 }
 
 #pets-list {
-    list-style: none;
+    list-style-type: none;
     padding: 0;
-    margin-top: 0;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 20px; /* space between items */
+    gap: 20px; /* Ensure consistent gap between items */
 }
 
 #pets-list-container {
@@ -157,13 +156,14 @@ body {
 }
 
 .pet-item {
-    background-color: #fff;
+    background-color: white;
     border: 1px solid #ccc;
     border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     width: 300px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: left;
+    margin: 10px; /* Ensure consistent margin */
 }
 
 .pet-item:hover {
