--- a/PetAdoptionAPI/Static/css/index.css
+++ b/PetAdoptionAPI/Static/css/index.css
@@ -19,8 +19,9 @@ header {
 }
 
 header h1 {
+    font-family: 'Lobster', cursive;
     margin: 0;
-    font-size: 3rem;
+    font-size: 5rem;
     color: white;
 }
 
@@ -37,7 +38,7 @@ main {
     display: flex;
     justify-content: center;
     gap: 120px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .filter-button {
@@ -45,7 +46,7 @@ main {
     background-color: white;
     border: 6px solid #FF9999;
     border-radius: 40px;
-    padding: 0;
+    padding: 20;
     width: 400px;
     height: 400px;
     cursor: pointer;
