--- a/PetAdoptionAPI/Templates/index.html
+++ b/PetAdoptionAPI/Templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/index.css">
+     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Pet Adoption Catalog</title>
 </head>
 
